--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,60 @@
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environments
 venv/
+.venv/
+env/
+.env/
 .env
 
-# Javascript/Node
-**/node_modules/
-npm-debug.log
-yarn-error.log
+# Node/Frontend
+node_modules/
+tema/node_modules/
+tema/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# MacOS
-.DS_Store
-._*
-
-# Build & Packaging
-package_build/
+# Installer / Packaging
 *.deb
+*.rpm
 *.tar.gz
-dist/
-build/
-*.spec
+package_build/
 
 # IDEs
-.vscode/
 .idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+run_log.txt
