--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Ro-Start CI
 
 on:
   push:
@@ -7,43 +7,52 @@ on:
     branches: ["main"]
 
 jobs:
-  build-ui:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18.x"
-          cache: "npm"
-          cache-dependency-path: tema/package-lock.json
-
-      - name: Install and Build UI
-        run: |
-          cd tema
-          npm ci
-          npm run build
-
-  check-python:
-    runs-on: ubuntu-latest
-    needs: build-ui
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install ruff black
 
-      - name: Analysing code with pylint
+      - name: Lint with Ruff
         run: |
-          pylint $(git ls-files '*.py') --disable=C,R,W || true # Şu anlık sadece kritik hatalara bak, yoksa fail etme
+          # stop the build if there are Python syntax errors or undefined names
+          ruff check .
+
+      - name: Format check with Black
+        run: |
+          black --check .
+
+  frontend-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+
+      - name: Install dependencies (Topic)
+        run: |
+          cd tema
+          npm ci
+
+      - name: Build Frontend
+        run: |
+          cd tema
+          npm run build
