refactor: Restructure project into backend, frontend and root config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 ]
 
 [project.scripts]
-ro-start = "src.main:main"
+ro-start = "backend.main:main"
 
 [tool.ruff]
 line-length = 120
