--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ env/
 
 # Node/Frontend
 node_modules/
-tema/node_modules/
-tema/dist/
+frontend/node_modules/
+frontend/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
