fix: resolve CI/CD failures (black formatting & frontend path)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,10 @@ jobs:
 
       - name: Install dependencies (Topic)
         run: |
-          cd tema
+          cd frontend
           npm ci
 
       - name: Build Frontend
         run: |
-          cd tema
+          cd frontend
           npm run build
