feat: add professional project structure
- Add scripts/ directory with install, build, and pre-commit hooks
- Add configs/ directory for app and distro configurations
- Add tests/ directory with pytest setup for backend
- Add docs/ directory with comprehensive documentation
  - ARCHITECTURE.md: System design and decisions
  - DEVELOPMENT.md: Development guide
  - API.md: Complete API reference
- Add pytest.ini for test configuration
- Split requirements into production and development
- Update README with new project structure
- All scripts are executable and ready to use

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+# Production Dependencies
 PyQt6
 PyQt6-WebEngine
 psutil
 darkdetect
 platformdirs
+
+# Development Dependencies (install with: pip install -r requirements-dev.txt)
