--- a/packaging/PKGBUILD
+++ b/packaging/PKGBUILD
@@ -29,10 +29,19 @@ package() {
     
     # Install desktop files
     install -Dm644 "data/$pkgname.desktop" "$pkgdir/usr/share/applications/$pkgname.desktop"
+    install -Dm644 "data/$pkgname-autostart.desktop" "$pkgdir/etc/xdg/autostart/$pkgname-autostart.desktop"
     install -Dm644 "data/$pkgname.png" "$pkgdir/usr/share/icons/hicolor/512x512/apps/$pkgname.png"
     install -Dm644 "data/org.osdev.ro_start.appdata.xml" "$pkgdir/usr/share/metainfo/org.osdev.ro_start.appdata.xml"
     
+    # Install man page
+    install -Dm644 "docs/$pkgname.1" "$pkgdir/usr/share/man/man1/$pkgname.1"
+    
+    # Install shell completions
+    install -Dm644 "packaging/completions/$pkgname.bash" "$pkgdir/usr/share/bash-completion/completions/$pkgname"
+    install -Dm644 "packaging/completions/$pkgname.zsh" "$pkgdir/usr/share/zsh/site-functions/_$pkgname"
+    install -Dm644 "packaging/completions/$pkgname.fish" "$pkgdir/usr/share/fish/vendor_completions.d/$pkgname.fish"
+    
     # Install documentation
-    install -Dm644 "README.md" "$pkgdir/usr/share/doc/$pk gname/README.md"
+    install -Dm644 "README.md" "$pkgdir/usr/share/doc/$pkgname/README.md"
     install -Dm644 "LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
